--- a/package.json
+++ b/package.json
@@ -58,6 +58,8 @@
     "webpack-merge": "^4.1.2"
   },
   "dependencies": {
+    "axios": "^0.18.0",
+    "bootstrap": "^4.1.2",
     "normalize.css": "^8.0.0",
     "react": "^16.4.0",
     "react-dom": "^16.4.0"
